# web20_qbt

./: README.md  consumer.py  consumer_email.py  consumer_sms.py  contact_model.py  main.py  producer.py  pyproject.toml
