[tool.poetry]
name = "web20-qbt"
version = "0.1.0"
description = ""
authors = ["Vasilivi4 <137120278+Vasilivi4@users.noreply.github.com>"]
license = "MTI"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
